--- a/faq-accordion-card-main/style.css
+++ b/faq-accordion-card-main/style.css
@@ -105,7 +105,7 @@ body {
 
 .image-wrapper-inner {
     height:100%;
-    background: url(/faq-accordion-card-main/images/illustration-woman-online-desktop.svg);
+    background: url(./images/illustration-woman-online-desktop.svg);
     background-repeat: no-repeat;
     background-position: 120% center;
 }
